# venus

./: .env_example  .gitignore  docker-compose.yaml  main.py  models.py  pyproject.toml  requirements.txt  routes.py  schemas.py  service.py  settings.py
admin/: __init__.py  models.py  resourses.py  routers.py
auth/: routes.py  schemes.py  securety.py  utils.py
base/: service.py
core/: models.py  routes.py  schemas.py  service.py
user/: models.py  routes.py  schemas.py  schemes.py  service.py
