[tool.poetry]
name = "venus"
version = "0.1.0"
description = ""
authors = ["Woolf <woolf.no1@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
tortoise-orm = "^0.18.1"
asyncpg = "^0.25.0"
fastapi-admin = "^1.0.3"
aioredis = "^2.0.1"
aiofiles = "^0.8.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
Pillow = "^9.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
